--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -32,14 +32,14 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Copy Migrations to VPS
+      - name: Copy Deployment Files to VPS
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.VPS_HOST }}
           username: faisal
           port: 9401
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "migrations"
+          source: "migrations,docker-compose.yml"  
           target: "/home/faisal/deploy"
 
       - name: SSH Deploy to VPS
@@ -51,10 +51,11 @@ jobs:
           port: 9401
           script: |
             cd /home/faisal/deploy
-
-            docker login ghcr.io -u ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }}
-            docker compose pull
+            echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+            docker network create deploy_netapp || true
             docker compose up -d db redis
+            sleep 10
+            
             docker run --rm \
               --network deploy_netapp \
               -v "/home/faisal/deploy/migrations:/migrations" \
@@ -62,4 +63,5 @@ jobs:
               -path=/migrations \
               -database "postgres://postgres:1@db:5432/cinevodb?sslmode=disable" \
               up
+              
             docker compose up -d app
