--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ services:
   cinevo:
     image: ghcr.io/vsalcode/fgo24-react-cinevo:latest
     ports:
-      - 9402:80
+      - "9402:80"
     networks:
       - netapp
-  app:
+    restart: unless-stopped
+      
+  backend_app:
     image: ghcr.io/vsalcode/fgo24-be-tickitz:latest
     ports:
-      - 9403:8080
+      - "9403:8080"
     networks:
       - netapp
     environment:
@@ -22,10 +24,14 @@ services:
       - APP_SECRET=uy8M7ikooTWJL7tabmGHhrcWsZwjHzXf
       - APP_PASSWORD=ujulqdxnfzobijwv
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    restart: unless-stopped
+      
   db:
-    image: postgres:15
+    image: postgres
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=1
@@ -34,17 +40,20 @@ services:
       - data_postgres:/var/lib/postgresql/data
     networks:
       - netapp
-    ports:
-      - "5432:5432"  
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
       
   redis:
-    image: redis:7
+    image: redis
     volumes:
       - data_redis:/data
     networks:
       - netapp
-    ports:
-      - "6379:6379"  
+    restart: unless-stopped
 
 volumes:
   data_postgres:
