--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -39,7 +39,7 @@ jobs:
           username: faisal
           port: 9401
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "migrations,docker-compose.yml"  
+          source: "migrations,docker-compose.yml,sql-scripts"  
           target: "/home/faisal/deploy"
 
       - name: SSH Deploy to VPS
@@ -69,7 +69,7 @@ jobs:
             docker compose up -d db redis
             
             echo "Waiting for database to be ready..."
-            for i in {1..60}; do  # Increased timeout
+            for i in {1..60}; do
               container_state=$(docker compose ps -q db | xargs docker inspect -f '{{.State.Status}}' 2>/dev/null)
               if [ "$container_state" = "running" ]; then
                 if docker compose exec -T db pg_isready -U postgres; then
@@ -89,8 +89,17 @@ jobs:
               -database "postgres://postgres:1@db:5432/cinevodb?sslmode=disable" \
               up
             
+            docker run --rm \
+              --network deploy_netapp \
+              -v "/home/faisal/deploy/sql-scripts:/scripts" \
+              postgres:latest \
+              psql "postgresql://postgres:1@db:5432/cinevodb" -f /scripts/dml.sql
+            
             docker compose up -d
             
             echo "Deployment verification:"
             docker compose ps
-            curl -I http://localhost:9403 || true
+            echo "Movie count:"
+            docker compose exec db psql -U postgres -d cinevodb -c "SELECT COUNT(*) FROM movies;"
+            echo "Genre count:"
+            docker compose exec db psql -U postgres -d cinevodb -c "SELECT COUNT(*) FROM genres;"
